examples/avm-res-operationalinsights-workspace/0.5.1/README.md
<!-- BEGIN_TF_DOCS -->
<!-- Code generated by terraform-docs. DO NOT EDIT. -->
# terraform-azurerm-avm-res-operationalinsights-workspace

This repo is to deploy an Log Analytics Workspace.

Major version Zero (0.y.z) is for initial development. Anything MAY change at any time. The module SHOULD NOT be considered stable till at least it is major version one (1.0.0) or greater. Changes will always be via new versions being published and no changes will be made to existing published versions. For more details please go to <https://semver.org/>

<!-- markdownlint-disable MD033 -->
## Requirements

The following requirements are needed by this module:

- <a name="requirement_terraform"></a> [terraform](#requirement\_terraform) (>= 1.9, < 2.0)

- <a name="requirement_azapi"></a> [azapi](#requirement\_azapi) (~> 2.4)

- <a name="requirement_azurerm"></a> [azurerm](#requirement\_azurerm) (>= 4.36.0, < 5.0.0)

- <a name="requirement_modtm"></a> [modtm](#requirement\_modtm) (~> 0.3)

- <a name="requirement_random"></a> [random](#requirement\_random) (~> 3.5)

- <a name="requirement_time"></a> [time](#requirement\_time) (~> 0.9)

## Resources

The following resources are used by this module:

- [azapi_resource.ampls](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)
- [azapi_resource.amplscope](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)
- [azapi_resource.data_export](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)
- [azapi_resource.nsp_association](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)
- [azapi_resource.tables](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)
- [azapi_update_resource.amplscope_update](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/update_resource) (resource)
- [azapi_update_resource.amplscope_update_existing](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/update_resource) (resource)
- [azapi_update_resource.tables](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/update_resource) (resource)
- [azapi_update_resource.this](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/update_resource) (resource)
- [azurerm_log_analytics_linked_service.this](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/log_analytics_linked_service) (resource)
- [azurerm_log_analytics_linked_storage_account.this](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/log_analytics_linked_storage_account) (resource)
- [azurerm_log_analytics_workspace.this](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/log_analytics_workspace) (resource)
- [azurerm_management_lock.amplscope](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/management_lock) (resource)
- [azurerm_management_lock.this](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/management_lock) (resource)
- [azurerm_monitor_diagnostic_setting.this](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/monitor_diagnostic_setting) (resource)
- [azurerm_monitor_private_link_scoped_service.this](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/monitor_private_link_scoped_service) (resource)
- [azurerm_private_endpoint.this](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/private_endpoint) (resource)
- [azurerm_private_endpoint.this_unmanaged](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/private_endpoint) (resource)
- [azurerm_private_endpoint_application_security_group_association.this](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/private_endpoint_application_security_group_association) (resource)
- [azurerm_private_endpoint_application_security_group_association.this_unmanaged](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/private_endpoint_application_security_group_association) (resource)
- [azurerm_role_assignment.this](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/role_assignment) (resource)
- [modtm_telemetry.telemetry](https://registry.terraform.io/providers/Azure/modtm/latest/docs/resources/telemetry) (resource)
- [random_uuid.telemetry](https://registry.terraform.io/providers/hashicorp/random/latest/docs/resources/uuid) (resource)
- [time_sleep.wait_for_ampls_update](https://registry.terraform.io/providers/hashicorp/time/latest/docs/resources/sleep) (resource)
- [azapi_client_config.telemetry](https://registry.terraform.io/providers/Azure/azapi/latest/docs/data-sources/client_config) (data source)
- [azapi_resource.ampls_connections](https://registry.terraform.io/providers/Azure/azapi/latest/docs/data-sources/resource) (data source)
- [azapi_resource.ampls_connections_existing](https://registry.terraform.io/providers/Azure/azapi/latest/docs/data-sources/resource) (data source)
- [azapi_resource.ampls_existing](https://registry.terraform.io/providers/Azure/azapi/latest/docs/data-sources/resource) (data source)
- [modtm_module_source.telemetry](https://registry.terraform.io/providers/Azure/modtm/latest/docs/data-sources/module_source) (data source)

<!-- markdownlint-disable MD013 -->
## Required Inputs

The following input variables are required:

### <a name="input_location"></a> [location](#input\_location)

Description: (Required) Specifies the suppored Azure location where the Log Analytics Workspace should exist. Changing this forces a new resource to be created

Type: `string`

### <a name="input_name"></a> [name](#input\_name)

Description: Specifies the name of the Log Analytics Workspace. Changing this forces a new resource to be created.

Type: `string`

### <a name="input_resource_group_name"></a> [resource\_group\_name](#input\_resource\_group\_name)

Description: (Required) Specifies the name of the Resource Group in which the Log Analytics Workspace should exist. Changing this forces a new resource to be created

Type: `string`

## Optional Inputs

The following input variables are optional (have default values):

### <a name="input_customer_managed_key"></a> [customer\_managed\_key](#input\_customer\_managed\_key)

Description: A map describing customer-managed keys to associate with the resource. This includes the following properties:
- `key_vault_resource_id` - The resource ID of the Key Vault where the key is stored.
- `key_name` - The name of the key.
- `key_version` - (Optional) The version of the key. If not specified, the latest version is used.
- `user_assigned_identity` - (Optional) An object representing a user-assigned identity with the following properties:
  - `resource_id` - The resource ID of the user-assigned identity.

Type:

```hcl
object({
    key_vault_resource_id = string
    key_name              = string
    key_version           = optional(string, null)
    user_assigned_identity = optional(object({
      resource_id = string
    }), null)
  })
```

Default: `null`

### <a name="input_diagnostic_settings"></a> [diagnostic\_settings](#input\_diagnostic\_settings)

Description:   A map of diagnostic settings to create on the resource. The map key is deliberately arbitrary to avoid issues where map keys maybe unknown at plan time.

  - `name` - (Optional) The name of the diagnostic setting. One will be generated if not set, however this will not be unique if you want to create multiple diagnostic setting resources.
  - `log_categories` - (Optional) A set of log categories to send to the log analytics workspace. Defaults to `[]`.
  - `log_groups` - (Optional) A set of log groups to send to the log analytics workspace. Defaults to `["allLogs"]`.
  - `metric_categories` - (Optional) A set of metric categories to send to the log analytics workspace. Defaults to `["AllMetrics"]`.
  - `log_analytics_destination_type` - (Optional) The destination type for the diagnostic setting. Possible values are `Dedicated` and `AzureDiagnostics`. Defaults to `Dedicated`.
  - `workspace_resource_id` - (Optional) The resource ID of the log analytics workspace to send logs and metrics to.
  - `storage_account_resource_id` - (Optional) The resource ID of the storage account to send logs and metrics to.
  - `event_hub_authorization_rule_resource_id` - (Optional) The resource ID of the event hub authorization rule to send logs and metrics to.
  - `event_hub_name` - (Optional) The name of the event hub. If none is specified, the default event hub will be selected.
  - `marketplace_partner_resource_id` - (Optional) The full ARM resource ID of the Marketplace resource to which you would like to send Diagnostic LogsLogs.

Type:

```hcl
map(object({
    name                                     = optional(string, null)
    log_categories                           = optional(set(string), [])
    log_groups                               = optional(set(string), ["allLogs"])
    metric_categories                        = optional(set(string), ["AllMetrics"])
    log_analytics_destination_type           = optional(string, "Dedicated")
    workspace_resource_id                    = optional(string, null)
    storage_account_resource_id              = optional(string, null)
    event_hub_authorization_rule_resource_id = optional(string, null)
    event_hub_name                           = optional(string, null)
    marketplace_partner_resource_id          = optional(string, null)
  }))
```

Default: `{}`

### <a name="input_enable_telemetry"></a> [enable\_telemetry](#input\_enable\_telemetry)

Description: This variable controls whether or not telemetry is enabled for the module.  
For more information see <https://aka.ms/avm/telemetryinfo>.  
If it is set to false, then no telemetry will be collected.

Type: `bool`

Default: `true`

### <a name="input_lock"></a> [lock](#input\_lock)

Description: Controls the Resource Lock configuration for this resource. The following properties can be specified:

- `kind` - (Required) The type of lock. Possible values are `\"CanNotDelete\"` and `\"ReadOnly\"`.
- `name` - (Optional) The name of the lock. If not specified, a name will be generated based on the `kind` value. Changing this forces the creation of a new resource.

Type:

```hcl
object({
    kind = string
    name = optional(string, null)
  })
```

Default: `null`

### <a name="input_log_analytics_workspace_allow_resource_only_permissions"></a> [log\_analytics\_workspace\_allow\_resource\_only\_permissions](#input\_log\_analytics\_workspace\_allow\_resource\_only\_permissions)

Description: (Optional) Specifies if the log Analytics Workspace allow users accessing to data associated with resources they have permission to view, without permission to workspace. Defaults to `true`.

Type: `bool`

Default: `null`

### <a name="input_log_analytics_workspace_cmk_for_query_forced"></a> [log\_analytics\_workspace\_cmk\_for\_query\_forced](#input\_log\_analytics\_workspace\_cmk\_for\_query\_forced)

Description: (Optional) Is Customer Managed Storage mandatory for query management?

Type: `bool`

Default: `null`

### <a name="input_log_analytics_workspace_daily_quota_gb"></a> [log\_analytics\_workspace\_daily\_quota\_gb](#input\_log\_analytics\_workspace\_daily\_quota\_gb)

Description: (Optional) The workspace daily quota for ingestion in GB. Defaults to -1 (unlimited) if omitted.

Type: `number`

Default: `null`

### <a name="input_log_analytics_workspace_data_exports"></a> [log\_analytics\_workspace\_data\_exports](#input\_log\_analytics\_workspace\_data\_exports)

Description:   A map of data exports to create.
  - `name` - The name of the data export rule.
  - `table_names` - A list of table names to export.
  - `destination_resource_id` - The resource ID of the destination (Storage Account or Event Hub).
  - `enabled` - (Optional) Whether the data export is enabled. Defaults to `true`.
  - `event_hub_name` - (Optional) The name of the Event Hub. Required if `destination_resource_id` is an Event Hub Namespace ID.

Type:

```hcl
map(object({
    name                    = string
    table_names             = list(string)
    destination_resource_id = string
    enabled                 = optional(bool, true)
    event_hub_name          = optional(string, null)
  }))
```

Default: `{}`

### <a name="input_log_analytics_workspace_dedicated_cluster_resource_id"></a> [log\_analytics\_workspace\_dedicated\_cluster\_resource\_id](#input\_log\_analytics\_workspace\_dedicated\_cluster\_resource\_id)

Description: (Optional) The resource ID of the dedicated cluster to link to the Log Analytics Workspace.

Type: `string`

Default: `null`

### <a name="input_log_analytics_workspace_identity"></a> [log\_analytics\_workspace\_identity](#input\_log\_analytics\_workspace\_identity)

Description: - `identity_ids` - (Optional) Specifies a list of user managed identity ids to be assigned. Required if `type` is `UserAssigned`.
- `type` - (Required) Specifies the identity type of the Log Analytics Workspace. Possible values are `SystemAssigned` (where Azure will generate a Service Principal for you) and `UserAssigned` where you can specify the Service Principal IDs in the `identity_ids` field.

Type:

```hcl
object({
    identity_ids = optional(set(string))
    type         = string
  })
```

Default: `null`

### <a name="input_log_analytics_workspace_internet_ingestion_enabled"></a> [log\_analytics\_workspace\_internet\_ingestion\_enabled](#input\_log\_analytics\_workspace\_internet\_ingestion\_enabled)

Description: (Optional) Should the Log Analytics Workspace support ingestion over the Public Internet? Possible values are `true`, `false`, and `SecuredByPerimeter`. Defaults to `false`.

Type: `string`

Default: `"false"`

### <a name="input_log_analytics_workspace_internet_query_enabled"></a> [log\_analytics\_workspace\_internet\_query\_enabled](#input\_log\_analytics\_workspace\_internet\_query\_enabled)

Description: (Optional) Should the Log Analytics Workspace support querying over the Public Internet? Possible values are `true`, `false`, and `SecuredByPerimeter`. Defaults to `false`.

Type: `string`

Default: `"false"`

### <a name="input_log_analytics_workspace_linked_storage_accounts"></a> [log\_analytics\_workspace\_linked\_storage\_accounts](#input\_log\_analytics\_workspace\_linked\_storage\_accounts)

Description:   A map of linked storage accounts to create.
  - `data_source_type` - The data source type which should be used for this Log Analytics Linked Storage Account. Possible values are `CustomLogs`, `AzureWatson`, `Query`, `Ingestion` and `Alerts`.
  - `storage_account_ids` - A list of storage account resource IDs to link.

Type:

```hcl
map(object({
    data_source_type    = string
    storage_account_ids = list(string)
  }))
```

Default: `{}`

### <a name="input_log_analytics_workspace_local_authentication_enabled"></a> [log\_analytics\_workspace\_local\_authentication\_enabled](#input\_log\_analytics\_workspace\_local\_authentication\_enabled)

Description: (Optional) Specifies if the log Analytics workspace should enforce authentication using Azure AD. Defaults to `true`.

Type: `bool`

Default: `true`

### <a name="input_log_analytics_workspace_reservation_capacity_in_gb_per_day"></a> [log\_analytics\_workspace\_reservation\_capacity\_in\_gb\_per\_day](#input\_log\_analytics\_workspace\_reservation\_capacity\_in\_gb\_per\_day)

Description: (Optional) The capacity reservation level in GB for this workspace. Possible values are `100`, `200`, `300`, `400`, `500`, `1000`, `2000` and `5000`.

Type: `number`

Default: `null`

### <a name="input_log_analytics_workspace_retention_in_days"></a> [log\_analytics\_workspace\_retention\_in\_days](#input\_log\_analytics\_workspace\_retention\_in\_days)

Description: (Optional) The workspace data retention in days. Possible values are either 7 (Free Tier only) or range between 30 and 730.

Type: `number`

Default: `null`

### <a name="input_log_analytics_workspace_sku"></a> [log\_analytics\_workspace\_sku](#input\_log\_analytics\_workspace\_sku)

Description: (Optional) Specifies the SKU of the Log Analytics Workspace. Possible values are `Free`, `PerNode`, `Premium`, `Standard`, `Standalone`, `Unlimited`, `CapacityReservation`, and `PerGB2018` (new SKU as of `2018-04-03`). Defaults to `PerGB2018`.

Type: `string`

Default: `null`

### <a name="input_log_analytics_workspace_tables"></a> [log\_analytics\_workspace\_tables](#input\_log\_analytics\_workspace\_tables)

Description: A map of tables to create in the Log Analytics Workspace.
- `name` - (Required) The name of the table.
- `resource_id` - (Optional) The resource ID of the Log Analytics Workspace where the table will be created. If not specified, the table will be created in the Log Analytics Workspace created by this module.
- `retention_in_days` - (Optional) The retention period for the table in days.
- `total_retention_in_days` - (Optional) The total retention period for the table in days.
- `plan` - (Optional) The plan for the table. Possible values are `Basic` and `Analytics`.
- `schema` - (Optional) The schema of the table.
  - `name` - (Optional) The name of the schema.
  - `description` - (Optional) The description of the schema.
  - `columns` - (Optional) A list of columns in the schema.
    - `name` - (Required) The name of the column.
    - `type` - (Required) The type of the column. Possible values are `boolean`, `datetime`, `dynamic`, `guid`, `int`, `long`, `real`, and `string`.

Type:

```hcl
map(object({
    name                    = string
    resource_id             = optional(string)
    retention_in_days       = optional(number)
    total_retention_in_days = optional(number)
    plan                    = optional(string)
    schema = optional(object({
      name        = optional(string)
      description = optional(string)
      columns = optional(list(object({
        name = string
        type = string
      })), [])
    }))
  }))
```

Default: `{}`

### <a name="input_log_analytics_workspace_tables_update"></a> [log\_analytics\_workspace\_tables\_update](#input\_log\_analytics\_workspace\_tables\_update)

Description: A map of tables to update in the Log Analytics Workspace. This is useful for updating default tables like `Heartbeat` or `Syslog`, or for adding new columns to existing tables.
- `name` - (Required) The name of the table.
- `resource_id` - (Optional) The resource ID of the Log Analytics Workspace where the table exists. If not specified, the table is assumed to be in the Log Analytics Workspace created by this module.
- `retention_in_days` - (Optional) The retention period for the table in days.
- `total_retention_in_days` - (Optional) The total retention period for the table in days.
- `plan` - (Optional) The plan for the table. Possible values are `Basic` and `Analytics`.
- `schema` - (Optional) The schema of the table. This can be used to add new columns to the table.
  - `name` - (Optional) The name of the schema.
  - `description` - (Optional) The description of the schema.
  - `columns` - (Optional) A list of columns in the schema.
    - `name` - (Required) The name of the column.
    - `type` - (Required) The type of the column. Possible values are `boolean`, `datetime`, `dynamic`, `guid`, `int`, `long`, `real`, and `string`.

> Note: Removing a table from this map (destroying the update resource) does not revert the changes made to the table (e.g. removing columns). It simply stops managing the resource. To remove a column, you must explicitly update the schema with the column removed before removing the table from this map.

Type:

```hcl
map(object({
    name                    = string
    resource_id             = optional(string)
    retention_in_days       = optional(number)
    total_retention_in_days = optional(number)
    plan                    = optional(string)
    schema = optional(object({
      name        = optional(string)
      description = optional(string)
      columns = optional(list(object({
        name = string
        type = string
      })), [])
    }))
  }))
```

Default: `{}`

### <a name="input_log_analytics_workspace_timeouts"></a> [log\_analytics\_workspace\_timeouts](#input\_log\_analytics\_workspace\_timeouts)

Description:  - `create` - (Defaults to 30 minutes) Used when creating the Log Analytics Workspace.
 - `delete` - (Defaults to 30 minutes) Used when deleting the Log Analytics Workspace.
 - `read` - (Defaults to 5 minutes) Used when retrieving the Log Analytics Workspace.
 - `update` - (Defaults to 30 minutes) Used when updating the Log Analytics Workspace.

Type:

```hcl
object({
    create = optional(string)
    delete = optional(string)
    read   = optional(string)
    update = optional(string)
  })
```

Default: `null`

### <a name="input_monitor_private_link_scope"></a> [monitor\_private\_link\_scope](#input\_monitor\_private\_link\_scope)

Description:   A map of Monitor Private Link Scopes to create. The map key is deliberately arbitrary to avoid issues where map keys maybe unknown at plan time.

  - `name` - (Optional) The name of the Monitor Private Link Scope. One will be generated if not set.
  - `resource_id` - (Required) The resource ID of the Resource Group where the Monitor Private Link Scope will be created.
  - `ingestion_access_mode` - (Optional) The ingestion access mode for the Monitor Private Link Scope. Possible values are `PrivateOnly` and `Open`. Defaults to `PrivateOnly`.
  - `query_access_mode` - (Optional) The query access mode for the Monitor Private Link Scope. Possible values are `PrivateOnly` and `Open`. Defaults to `PrivateOnly`.
  - `exclusions` - (Optional) A list of exclusions to apply to the Monitor Private Link Scope.
    - `ingestion_access_mode` - (Optional) The ingestion access mode for the exclusion. Possible values are `PrivateOnly` and `Open`. Defaults to `PrivateOnly`.
    - `query_access_mode` - (Optional) The query access mode for the exclusion. Possible values are `PrivateOnly` and `Open`. Defaults to `PrivateOnly`.
    - `private_endpoint_connection_name` - (Required) The name of the private endpoint connection to exclude.
  - `lock` - (Optional) Controls the Resource Lock configuration for this resource. The following properties can be specified:
    - `kind` - (Required) The type of lock. Possible values are `CanNotDelete` and `ReadOnly`.
    - `name` - (Optional) The name of the lock. If not specified, a name will be generated based on the `kind` value. Changing this forces the creation of a new resource.

  > Note: If the map key matches a key in `var.private_endpoints`, the private endpoint connection created by this module will be automatically added to the exclusions list unless `monitor_private_link_scope_exclusion.exclude` is set to `false` in the private endpoint configuration. The access modes default to `PrivateOnly` but can be customized via `monitor_private_link_scope_exclusion`. You can also manually add an exclusion with the same `private_endpoint_connection_name` in the `exclusions` list of this variable, but using the private endpoint configuration is recommended.

Type:

```hcl
map(object({
    name                  = optional(string)
    resource_id           = string
    ingestion_access_mode = optional(string, "PrivateOnly")
    query_access_mode     = optional(string, "PrivateOnly")
    exclusions = optional(list(object({
      ingestion_access_mode            = optional(string, "PrivateOnly")
      query_access_mode                = optional(string, "PrivateOnly")
      private_endpoint_connection_name = string
    })), [])
    lock = optional(object({
      kind = string
      name = optional(string, null)
    }))
  }))
```

Default: `{}`

### <a name="input_monitor_private_link_scoped_resource"></a> [monitor\_private\_link\_scoped\_resource](#input\_monitor\_private\_link\_scoped\_resource)

Description:  - `name` - Defaults to the name of the Log Analytics Workspace.
 - `resource_id` - Resource ID of an existing Monitor Private Link Scope to connect to.
 - `exclusions` - (Optional) A list of exclusions to apply to the Monitor Private Link Scope.
    - `ingestion_access_mode` - (Optional) The ingestion access mode for the exclusion. Possible values are `PrivateOnly` and `Open`. Defaults to `PrivateOnly`.
    - `query_access_mode` - (Optional) The query access mode for the exclusion. Possible values are `PrivateOnly` and `Open`. Defaults to `PrivateOnly`.
    - `private_endpoint_connection_name` - (Required) The name of the private endpoint connection to exclude.

Type:

```hcl
map(object({
    name        = optional(string)
    resource_id = string
    exclusions = optional(list(object({
      ingestion_access_mode            = optional(string, "PrivateOnly")
      query_access_mode                = optional(string, "PrivateOnly")
      private_endpoint_connection_name = string
    })), [])
  }))
```

Default: `{}`

### <a name="input_monitor_private_link_scoped_service_name"></a> [monitor\_private\_link\_scoped\_service\_name](#input\_monitor\_private\_link\_scoped\_service\_name)

Description: The name of the service to connect to the Monitor Private Link Scope.

Type: `string`

Default: `null`

### <a name="input_network_security_perimeter_association"></a> [network\_security\_perimeter\_association](#input\_network\_security\_perimeter\_association)

Description: (Optional) The Network Security Perimeter (NSP) association configuration.
- `resource_id` - (Required) The resource ID of the Network Security Perimeter.
- `profile_name` - (Required) The name of the NSP profile to associate with.
- `access_mode` - (Optional) The access mode for the association. Possible values are `Learning`, `Enforced`, and `Audit`. Defaults to `Learning`.

Type:

```hcl
object({
    resource_id  = string
    profile_name = string
    access_mode  = optional(string, "Learning")
  })
```

Default: `null`

### <a name="input_private_endpoint_extensions"></a> [private\_endpoint\_extensions](#input\_private\_endpoint\_extensions)

Description:   A map of extensions to apply to the private endpoints. The map key must match the key in `var.private_endpoints`.

  - `monitor_private_link_scope_key` - (Optional) The key of the Monitor Private Link Scope to associate with the private endpoint.
  - `monitor_private_link_scope_exclusion` - (Optional) The exclusion configuration for the Monitor Private Link Scope.
    - `exclude` - (Optional) Whether to exclude the private endpoint from the Monitor Private Link Scope. Defaults to `true`.
    - `ingestion_access_mode` - (Optional) The ingestion access mode for the exclusion. Possible values are `PrivateOnly` and `Open`. Defaults to `PrivateOnly`.
    - `query_access_mode` - (Optional) The query access mode for the exclusion. Possible values are `PrivateOnly` and `Open`. Defaults to `PrivateOnly`.
  - `manage_dns_zone_group` - (Optional) Whether to manage private DNS zone groups with this module. If set to false, you must manage private DNS zone groups externally, e.g. using Azure Policy. Defaults to `true`.

Type:

```hcl
map(object({
    monitor_private_link_scope_key = optional(string, null)
    monitor_private_link_scope_exclusion = optional(object({
      exclude               = optional(bool, true)
      ingestion_access_mode = optional(string, "PrivateOnly")
      query_access_mode     = optional(string, "PrivateOnly")
    }), null)
    manage_dns_zone_group = optional(bool, true)
  }))
```

Default: `{}`

### <a name="input_private_endpoints"></a> [private\_endpoints](#input\_private\_endpoints)

Description:   A map of private endpoints to create on the resource. The map key is deliberately arbitrary to avoid issues where map keys maybe unknown at plan time.

  - `name` - (Optional) The name of the private endpoint. One will be generated if not set.
  - `role_assignments` - (Optional) A map of role assignments to create on the private endpoint. The map key is deliberately arbitrary to avoid issues where map keys maybe unknown at plan time. See `var.role_assignments` for more information.
  - `lock` - (Optional) The lock level to apply to the private endpoint. Default is `None`. Possible values are `None`, `CanNotDelete`, and `ReadOnly`.
  - `tags` - (Optional) A mapping of tags to assign to the private endpoint.
  - `subnet_resource_id` - The resource ID of the subnet to deploy the private endpoint in.
  - `private_dns_zone_group_name` - (Optional) The name of the private DNS zone group. One will be generated if not set.
  - `private_dns_zone_resource_ids` - (Optional) A set of resource IDs of private DNS zones to associate with the private endpoint. If not set, no zone groups will be created and the private endpoint will not be associated with any private DNS zones. DNS records must be managed external to this module.
  - `application_security_group_resource_ids` - (Optional) A map of resource IDs of application security groups to associate with the private endpoint. The map key is deliberately arbitrary to avoid issues where map keys maybe unknown at plan time.
  - `private_service_connection_name` - (Optional) The name of the private service connection. One will be generated if not set.
  - `network_interface_name` - (Optional) The name of the network interface. One will be generated if not set.
  - `location` - (Optional) The Azure location where the resources will be deployed. Defaults to the location of the resource group.
  - `resource_group_name` - (Optional) The resource group where the resources will be deployed. Defaults to the resource group of the Key Vault.
  - `ip_configurations` - (Optional) A map of IP configurations to create on the private endpoint. If not specified the platform will create one. The map key is deliberately arbitrary to avoid issues where map keys maybe unknown at plan time.
    - `name` - The name of the IP configuration.
    - `private_ip_address` - The private IP address of the IP configuration.

Type:

```hcl
map(object({
    name = optional(string, null)
    role_assignments = optional(map(object({
      role_definition_id_or_name             = string
      principal_id                           = string
      description                            = optional(string, null)
      skip_service_principal_aad_check       = optional(bool, false)
      condition                              = optional(string, null)
      condition_version                      = optional(string, null)
      delegated_managed_identity_resource_id = optional(string, null)
      principal_type                         = optional(string, null)
    })), {})
    lock = optional(object({
      kind = string
      name = optional(string, null)
    }), null)
    tags                                    = optional(map(string), null)
    subnet_resource_id                      = string
    private_dns_zone_group_name             = optional(string, "default")
    private_dns_zone_resource_ids           = optional(set(string), [])
    application_security_group_associations = optional(map(string), {})
    private_service_connection_name         = optional(string, null)
    network_interface_name                  = optional(string, null)
    location                                = optional(string, null)
    resource_group_name                     = optional(string, null)
    ip_configurations = optional(map(object({
      name               = string
      private_ip_address = string
    })), {})
  }))
```

Default: `{}`

### <a name="input_role_assignments"></a> [role\_assignments](#input\_role\_assignments)

Description:   A map of role assignments to create on the <RESOURCE>. The map key is deliberately arbitrary to avoid issues where map keys maybe unknown at plan time.

  - `role_definition_id_or_name` - The ID or name of the role definition to assign to the principal.
  - `principal_id` - The ID of the principal to assign the role to.
  - `description` - (Optional) The description of the role assignment.
  - `skip_service_principal_aad_check` - (Optional) If set to true, skips the Azure Active Directory check for the service principal in the tenant. Defaults to false.
  - `condition` - (Optional) The condition which will be used to scope the role assignment.
  - `condition_version` - (Optional) The version of the condition syntax. Leave as `null` if you are not using a condition, if you are then valid values are '2.0'.
  - `delegated_managed_identity_resource_id` - (Optional) The delegated Azure Resource Id which contains a Managed Identity. Changing this forces a new resource to be created. This field is only used in cross-tenant scenario.
  - `principal_type` - (Optional) The type of the `principal_id`. Possible values are `User`, `Group` and `ServicePrincipal`. It is necessary to explicitly set this attribute when creating role assignments if the principal creating the assignment is constrained by ABAC rules that filters on the PrincipalType attribute.

  > Note: only set `skip_service_principal_aad_check` to true if you are assigning a role to a service principal.

Type:

```hcl
map(object({
    role_definition_id_or_name             = string
    principal_id                           = string
    description                            = optional(string, null)
    skip_service_principal_aad_check       = optional(bool, false)
    condition                              = optional(string, null)
    condition_version                      = optional(string, null)
    delegated_managed_identity_resource_id = optional(string, null)
    principal_type                         = optional(string, null)
  }))
```

Default: `{}`

### <a name="input_tags"></a> [tags](#input\_tags)

Description: (Optional) Tags of the resource.

Type: `map(string)`

Default: `null`

## Outputs

The following outputs are exported:

### <a name="output_private_endpoints"></a> [private\_endpoints](#output\_private\_endpoints)

Description:   A map of the private endpoints created.

### <a name="output_resource"></a> [resource](#output\_resource)

Description: "This is the full output for the Log Analytics resource. This is the default output for the module following AVM standards. Review the examples below for the correct output to use in your module."  
Examples:
- module.log\_analytics.resource.id
- module.log\_analytics.resource.name

### <a name="output_resource_id"></a> [resource\_id](#output\_resource\_id)

Description: This is the full output for the Log Analytics resource ID. This is the default output for the module following AVM standards. Review the examples below for the correct output to use in your module.

## Modules

No modules.

<!-- markdownlint-disable-next-line MD041 -->
## Data Collection

The software may collect information about you and your use of the software and send it to Microsoft. Microsoft may use this information to provide services and improve our products and services. You may turn off the telemetry as described in the repository. There are also some features in the software that may enable you and Microsoft to collect data from users of your applications. If you use these features, you must comply with applicable law, including providing appropriate notices to users of your applications together with a copy of Microsoft’s privacy statement. Our privacy statement is located at <https://go.microsoft.com/fwlink/?LinkID=824704>. You can learn more about data collection and use in the help documentation and our privacy statement. Your use of the software operates as your consent to these practices.
<!-- END_TF_DOCS -->
